--- a/src/lib/globals.css
+++ b/src/lib/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
+
 html,
 body,
 :root {
