--- a/src/lib/globals.css
+++ b/src/lib/globals.css
@@ -4,6 +4,28 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
 
+/* width */
+::-webkit-scrollbar {
+  width: 2px;
+  display: none;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 2px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+  background: #555;
+  }
+
 html,
 body,
 :root {
