--- a/src/lib/globals.css
+++ b/src/lib/globals.css
@@ -8,24 +8,26 @@
 /* width */
 ::-webkit-scrollbar {
   width: 2px;
+  height: 2px;
+}
 
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
+/* Track */
+::-webkit-scrollbar-track {
   background: #f1f1f1;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
   background: #888;
   border-radius: 2px;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
   background: #555;
-  }
+ 
+  height: 2px;
+}
 
 html,
 body,
